@@ -1996,11 +1996,11 @@ spec:
             - containerPort: 8761
           resources:
             requests:
-              memory: 400Mi
+              memory: 256Mi
               cpu: 50m
             limits:
-              memory: 2Gi
-              cpu: 2000m
+              memory: 512Mi
+              cpu: 1000m
           env:
             - name: MY_POD_NAME
               valueFrom:
@@ -2170,703 +2170,6 @@ eureka-cluster   1/3     8m10s
 
 
 
-
-
-#[Spring Cloud开发、交付实践](http://49.7.203.222:3000/#/spring-cloud/register-center?id=spring-cloud开发、交付实践)
-
-https://spring.io/projects/spring-cloud#overview
-
-1、Netflix是一家做视频的网站，可以这么说该网站上的美剧应该是最火的。
-
-2、Netflix是一家没有CTO的公司，正是这样的组织架构能使产品与技术无缝的沟通，从而能快速迭代出更优秀的产品。在当时软件敏捷开发中，Netflix的更新速度不亚于当年的微信后台变更，虽然微信比Netflix迟发展，但是当年微信的灰度发布和敏捷开发应该算是业界最猛的。
-
-3、Netflix由于做视频的原因，访问量非常的大，从而促使其技术快速的发展在背后支撑着，也正是如此，Netflix开始把整体的系统往微服务上迁移。
-
-4、Netflix的微服务做的不是最早的，但是确是最大规模的在生产级别微服务的尝试。也正是这种大规模的生产级别尝试，在服务器运维上依托AWS云。当然AWS云同样受益于Netflix的大规模业务不断的壮大。
-
-5、Netflix的微服务大规模的应用，在技术上毫无保留的把一整套微服务架构核心技术栈开源了出来，叫做Netflix OSS，也正是如此，在技术上依靠开源社区的力量不断的壮大。
-
-6、Spring Cloud是构建微服务的核心，而Spring Cloud是基于Spring Boot来开发的。
-
-7、Pivotal在Netflix开源的一整套核心技术产品线的同时，做了一系列的封装，就变成了Spring Cloud；虽然Spring Cloud到现在为止不只有Netflix提供的方案可以集成，还有很多方案，但Netflix是最成熟的。
-
-> 本课程基于SpringBoot 2.3.6.RELEASE 和Spring Cloud Hoxton.SR9 版本
-
-#### [微服务场景](http://49.7.203.222:3000/#/spring-cloud/register-center?id=微服务场景)
-
-开发APP，提供个人的花呗账单管理。
-
-- 注册、登录、账单查询
-- 用户服务，账单管理服务
-
-![img](9Spring Cloud微服务项目交付.assets/demo-project-20221018080750098.png)
-
-![img](9Spring Cloud微服务项目交付.assets/arch-20221018080750132.png)
-
-#### [Eureka服务注册中心](http://49.7.203.222:3000/#/spring-cloud/register-center?id=eureka服务注册中心)
-
-在`SpringCloud`体系中，我们知道服务之间的调用是通过`http`协议进行调用的。而注册中心的主要目的就是维护这些服务的服务列表。
-
-https://docs.spring.io/spring-cloud-netflix/docs/3.0.3/reference/html/
-
-##### [新建项目](http://49.7.203.222:3000/#/spring-cloud/register-center?id=新建项目)
-
-> Group com.luffy
->
-> Group: eureka
->
-> 
-
-![img](9Spring Cloud微服务项目交付.assets/new-eureka-20221018080750087.jpg)
-
-pom中引入spring-cloud的依赖：
-
-https://spring.io/projects/spring-cloud#overview
-
-```xml
-<properties>
-    <spring.cloud-version>Hoxton.SR9</spring.cloud-version>
-</properties>
-<dependencyManagement>
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-dependencies</artifactId>
-            <version>${spring.cloud-version}</version>
-            <type>pom</type>
-            <scope>import</scope>
-        </dependency>
-    </dependencies>
-</dependencyManagement>
-```
-
-引入eureka-server的依赖：
-
-```xml
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-        </dependency>
-```
-
-##### [启动eureka服务](http://49.7.203.222:3000/#/spring-cloud/register-center?id=启动eureka服务)
-
-https://docs.spring.io/spring-cloud-netflix/docs/2.2.5.RELEASE/reference/html/#spring-cloud-eureka-server-standalone-mode
-
-application.yml
-
-```yaml
-server:
-  port: 8761
-  
-eureka:
-  client:
-    service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-    register-with-eureka: false
-    fetch-registry: false
-  instance:
-    hostname: localhost
-```
-
-启动类：
-
-```java
-package com.luffy.eureka;
-
-import org.springframework.boot.SpringApplication;
-import org.springframework.boot.autoconfigure.SpringBootApplication;
-import org.springframework.cloud.netflix.eureka.server.EnableEurekaServer;
-
-@SpringBootApplication
-@EnableEurekaServer
-public class EurekaServerApplication {
-    public static void main(String[] args) {
-        SpringApplication.run(EurekaServerApplication.class, args);
-    }
-}
-```
-
-启动访问localhost:8761测试
-
-创建spring cloud项目三部曲：
-
-- 引入依赖包
-- 修改application.yml配置文件
-- 启动类添加注解
-
-##### [eureka认证](http://49.7.203.222:3000/#/spring-cloud/register-center?id=eureka认证)
-
-没有认证，不安全，添加认证：
-
-```xml
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
-```
-
-application.yml
-
-```yaml
-server:
-  port: 8761
-eureka:
-  client:
-    service-url:
-      defaultZone: http://${spring.security.user.name}:${spring.security.user.password}@${eureka.instance.hostname}:${server.port}/eureka/
-    register-with-eureka: false
-    fetch-registry: false
-  instance:
-    hostname: localhost
-spring:
-  security:
-    user:
-      name: ${EUREKA_USER:admin}
-      password: ${EUREKA_PASS:admin}
-  application:
-    name: eureka
-```
-
-##### [注册服务到eureka](http://49.7.203.222:3000/#/spring-cloud/register-center?id=注册服务到eureka)
-
-新建项目，user-service（选择Spring Cloud依赖和SpringBoot Web依赖），用来提供用户查询功能。
-
-三部曲：
-
-- pom.xml，并添加依赖
-- 创建application.yml配置文件
-- 创建Springboot启动类，并配置注解
-
-`pom.xml`添加：
-
-```xml
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-application.yml
-server:
-  port: 7000
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://${EUREKA_USER:admin}:${EUREKA_PASS:admin}@localhost:8761/eureka/
-```
-
-启动类：
-
-```java
-package com.luffy.user;
-
-import org.springframework.boot.SpringApplication;
-import org.springframework.boot.autoconfigure.SpringBootApplication;
-import org.springframework.cloud.client.discovery.EnableDiscoveryClient;
-
-//注意这里也可使用@EnableEurekaClient
-//但由于springcloud是灵活的，注册中心支持eureka、consul、zookeeper等
-//若写了具体的注册中心注解，则当替换成其他注册中心时，又需要替换成对应的注解了。
-//所以 直接使用@EnableDiscoveryClient 启动发现。
-//这样在替换注册中心时，只需要替换相关依赖即可。
-@EnableDiscoveryClient
-@SpringBootApplication
-public class UserServiceApplication {
-    public static void main(String[] args) {
-        SpringApplication.run(UserServiceApplication.class, args);
-    }
-}
-```
-
-报错：
-
-```yaml
-c.n.d.s.t.d.RetryableEurekaHttpClient    : Request execution failed with message: com.fasterxml.jackson.databind.exc.MismatchedInputException: Root name 'timestamp' does not match expected ('instance') for type [simple type, class com.netflix.appinfo.InstanceInfo]
-```
-
-新版本的security默认开启csrf了，关掉，在注册中心新建一个类，继承WebSecurityConfigurerAdapter来关闭 ,> 注意，是在eureka server端关闭。
-
-```java
-package com.luffy.eureka;
-
-import org.springframework.context.annotation.Configuration;
-import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
-
-@EnableWebSecurity
-@Configuration
-public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
-
-    @Override
-    protected void configure(HttpSecurity http) throws Exception {
-        http.csrf().disable(); //关闭csrf
-        http.authorizeRequests().anyRequest().authenticated().and().httpBasic(); //开启认证
-    }
-}
-```
-
-再次启动发现可以注册，但是地址是
-
-![image-20200915211607173](9Spring Cloud微服务项目交付.assets/image-20200915211607173-20221018080750413.png)
-
-application.yaml
-
-```yaml
-server:
-  port: 7000
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://${EUREKA_USER:admin}:${EUREKA_PASS:admin}@localhost:8761/eureka/
-  instance:
-    instance-id: ${eureka.instance.hostname}:${server.port}
-    prefer-ip-address: true
-    hostname: user-service
-spring:
-  application:
-    name: user-service
-```
-
-Eurake有一个配置参数eureka.server.renewalPercentThreshold，定义了renews 和renews threshold的比值，默认值为0.85。当server在15分钟内，比值低于percent，即少了15%的微服务心跳，server会进入自我保护状态
-
-默认情况下，如果`Eureka Server`在一定时间内没有接收到某个微服务实例的心跳，`Eureka Server`将会注销该实例（默认90秒）。但是当网络分区故障发生时，微服务与Eureka Server之间无法正常通信，这就可能变得非常危险了，因为微服务本身是健康的，此时本不应该注销这个微服务。
-
-`Eureka Server`通过“自我保护模式”来解决这个问题，当`Eureka Server`节点在短时间内丢失过多客户端时（可能发生了网络分区故障），那么这个节点就会进入自我保护模式。一旦进入该模式，`Eureka Server`就会保护服务注册表中的信息，不再删除服务注册表中的数据（也就是不会注销任何微服务）。当网络故障恢复后，该`Eureka Server`节点会自动退出自我保护模式。
-
-**自我保护模式是一种对网络异常的安全保护措施。使用自我保护模式，而让Eureka集群更加的健壮、稳定。**
-
-开发阶段可以通过配置：`eureka.server.enable-self-preservation=false`关闭自我保护模式。
-
-**生产阶段，理应以默认值进行配置。**
-
-至于具体具体的配置参数，可至官网查看：http://cloud.spring.io/spring-cloud-static/Finchley.RELEASE/single/spring-cloud.html#_appendix_compendium_of_configuration_properties
-
-##### [高可用](http://49.7.203.222:3000/#/spring-cloud/register-center?id=高可用)
-
-高可用：
-
-- 优先保证可用性
-- 各个节点都是平等的，1个节点挂掉不会影响正常节点的工作，剩余的节点依然可以提供注册和查询服务
-- 在向某个Eureka注册时如果发现连接失败，则会自动切换至其它节点，只要有一台Eureka还在，就能保证注册服务可用(保证可用性)
-
-注意点：
-
-- 多实例的话eureka.instance.instance-id需要保持不一样，否则会当成同一个
-- eureka.instance.hostname要与defaultZone里的地址保持一致
-- 各个eureka的spring.application.name相同
-
-![img](9Spring Cloud微服务项目交付.assets/eureka-cluster-20221018080750061.jpg)
-
-拷贝`eureka`服务，分别命名`eureka-ha-peer1`和`eureka-ha-peer2`
-
-修改模块的`pom.xml`
-
-```xml
-<artifactId>eureka-ha-peer1</artifactId>
-```
-
-修改配置文件`application.yml`，注意集群服务，需要各个eureka的spring.application.name相同
-
-```yaml
-server:
-  port: ${EUREKA_PORT:8762}
-eureka:
-  client:
-    service-url:
-      defaultZone: ${EUREKA_SERVER:http://${spring.security.user.name}:${spring.security.user.password}@peer1:8762/eureka/,http://${spring.security.user.name}:${spring.security.user.password}@peer2:8763/eureka/}
-    fetch-registry: true
-  instance:
-    instance-id: ${eureka.instance.hostname}:${server.port}
-    hostname: peer1
-spring:
-  security:
-    user:
-      name: ${EUREKA_USER:admin}
-      password: ${EUREKA_PASS:admin}
-  application:
-    name: eureka-cluster
-```
-
-设置hosts文件
-
-```bash
-127.0.0.1 peer1 peer2
-```
-
-服务提供者若想连接高可用的eureka，需要修改：
-
-```bash
-      defaultZone: http://${EUREKA_USER:admin}:${EUREKA_PASS:admin}@peer1:8762/eureka/,http://${EUREKA_USER:admin}:${EUREKA_PASS:admin}@peer2:8763/eureka/
-```
-
-##### [k8s交付](http://49.7.203.222:3000/#/spring-cloud/register-center?id=k8s交付)
-
-分析：
-
-高可用互相注册，但是需要知道对方节点的地址。k8s中pod ip是不固定的，如何将高可用的eureka服务使用k8s交付？
-
-- 方案一：创建三个Deployment+三个Service
-
-  ![img](9Spring Cloud微服务项目交付.assets/eureka-ha-deploy-20221018080750177.jpg)
-
-- 方案二：使用statefulset管理
-
-  ![img](http://49.7.203.222:3000/spring-cloud/images/eureka-sts.jpg)
-
-```
-eureka-statefulset.yaml
-# eureka-statefulset.yaml
-apiVersion: apps/v1
-kind: StatefulSet
-metadata:
-  name: eureka-cluster
-  namespace: dev
-spec:
-  serviceName: "eureka"
-  replicas: 3
-  selector:
-    matchLabels:
-      app: eureka-cluster
-  template:
-    metadata:
-      labels:
-        app: eureka-cluster
-    spec:
-      containers:
-        - name: eureka
-          image: 172.21.51.143:5000/spring-cloud/eureka-cluster:v1
-          ports:
-            - containerPort: 8761
-          resources:
-            requests:
-              memory: 400Mi
-              cpu: 50m
-            limits:
-              memory: 2Gi
-              cpu: 2000m
-          env:
-            - name: MY_POD_NAME
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.name
-            - name: JAVA_OPTS
-              value: -XX:+UnlockExperimentalVMOptions
-                -XX:+UseCGroupMemoryLimitForHeap
-                -XX:MaxRAMFraction=2
-                -XX:CICompilerCount=8
-                -XX:ActiveProcessorCount=8
-                -XX:+UseG1GC
-                -XX:+AggressiveOpts
-                -XX:+UseFastAccessorMethods
-                -XX:+UseStringDeduplication
-                -XX:+UseCompressedOops
-                -XX:+OptimizeStringConcat
-            - name: EUREKA_SERVER
-              value: "http://admin:admin@eureka-cluster-0.eureka:8761/eureka/,http://admin:admin@eureka-cluster-1.eureka:8761/eureka/,http://admin:admin@eureka-cluster-2.eureka:8761/eureka/"
-            - name: EUREKA_INSTANCE_HOSTNAME
-              value: ${MY_POD_NAME}.eureka
-            - name: EUREKA_PORT
-              value: "8761"
-eureka-headless-service.yaml
-apiVersion: v1
-kind: Service
-metadata:
-  name: eureka
-  namespace: dev
-  labels:
-    app: eureka
-spec:
-  ports:
-    - port: 8761
-      name: eureka
-  clusterIP: None
-  selector:
-    app: eureka-cluster
-```
-
-想通过ingress访问eureka，需要使用有头服务
-
-```yaml
-apiVersion: v1
-kind: Service
-metadata:
-  name: eureka-ingress
-  namespace: dev
-  labels:
-    app: eureka-cluster
-spec:
-  ports:
-    - port: 8761
-      name: eureka-cluster
-  selector:
-    app: eureka-cluster
-```
-
-ingress提供访问入口：
-
-```yaml
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: eureka-cluster
-  namespace: dev
-spec:
-  rules:
-  - host: eureka-cluster.luffy.com
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service: 
-            name: eureka-ingress
-            port:
-              number: 8761
-```
-
-##### [使用StatefulSet管理有状态服务](http://49.7.203.222:3000/#/spring-cloud/register-center?id=使用statefulset管理有状态服务)
-
-使用StatefulSet创建多副本pod的情况：
-
-```yaml
-apiVersion: apps/v1
-kind: StatefulSet
-metadata:
-  name: nginx-statefulset
-  labels:
-    app: nginx-sts
-spec:
-  replicas: 3
-  serviceName: "nginx"
-  selector:
-    matchLabels:
-      app: nginx-sts
-  template:
-    metadata:
-      labels:
-        app: nginx-sts
-    spec:
-      containers:
-      - name: nginx
-        image: nginx:alpine
-        ports:
-        - containerPort: 80
-```
-
-无头服务Headless Service
-
-```yaml
-kind: Service
-apiVersion: v1
-metadata:
-  name: nginx
-spec:
-  selector:
-    app: nginx-sts
-  ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 80
-  clusterIP: None
-$ kubectl -n spring exec  -ti nginx-statefulset-0 sh
-/ # curl nginx-statefulset-2.nginx
-```
-
-##### [接入CICD流程](http://49.7.203.222:3000/#/spring-cloud/register-center?id=接入cicd流程)
-
-所需的文件:
-
-- Jenkinsfile
-- Dockerfile
-- manifests/statefulset.yaml,service.yaml
-- sonar-project.properties
-
-在pom.xml中重写jar包名称：
-
-```xml
-<finalName>${project.artifactId}</finalName>
-```
-
-`Dockerfile`
-```
-FROM openjdk:8-jdk-alpine
-ADD target/eureka.jar app.jar
-ENV JAVA_OPTS=""
-CMD [ "sh", "-c", "java $JAVA_OPTS -jar /app.jar" ]
-```
-
-`Jenkinsfile`
-```
-@Library('luffy-devops') _
-
-pipeline {
-    agent { label 'jnlp-slave'}
-    options {
-        timeout(time: 20, unit: 'MINUTES')
-        gitLabConnection('gitlab')
-    }
-    environment {
-        IMAGE_REPO = "172.21.51.143:5000/spring-cloud/eureka-cluster"
-        IMAGE_CREDENTIAL = "credential-registry"
-        DINGTALK_CREDS = credentials('dingTalk')
-        PROJECT = "eureka-cluster"
-    }
-    stages {
-        stage('checkout') {
-            steps {
-                container('tools') {
-                    checkout scm
-                }
-            }
-        }
-        stage('mvn-package') {
-            steps {
-                container('tools') {
-                    script{
-                        sh 'mvn clean package'
-                    }
-                }
-            }
-        }
-        stage('CI'){
-            failFast true
-            parallel {
-                stage('Unit Test') {
-                    steps {
-                        echo "Unit Test Stage Skip..."
-                    }
-                }
-                stage('Code Scan') {
-                    steps {
-                        container('tools') {
-                            script {
-                               devops.scan().start()
-                            }
-                        }
-                    }
-                }
-            }
-        }
-
-        stage('docker-image') {
-            steps {
-                container('tools') {
-                    script{
-                        devops.docker(
-                            "${IMAGE_REPO}",
-                            "${GIT_COMMIT}",
-                            IMAGE_CREDENTIAL
-                        ).build().push()
-                    }
-                }
-            }
-        }
-        stage('deploy') {
-            steps {
-                container('tools') {
-                    script{
-                        devops.deploy("manifests",false,"manifests/statefulset.yaml").start()
-                    }
-                }
-            }
-        }
-    }
-    post {
-        success {
-            script{
-                devops.notificationSuccess(PROJECT,"dingTalk")
-            }
-        }
-        failure {
-            script{
-                devops.notificationFailure(PROJECT,"dingTalk")
-            }
-        }
-    }
-}
-```
-
-`sonar-project.properties`
-```
-sonar.projectKey=eureka-cluster
-sonar.projectName=eureka-cluster
-# if you want disabled the DTD verification for a proxy problem for example, true by default
-# JUnit like test report, default value is test.xml
-sonar.sources=src/main/java
-sonar.language=java
-sonar.tests=src/test/java
-sonar.java.binaries=target/classes
-```
-
-模板化k8s资源清单：
-
-```bash
-# eureka-statefulset.yaml
-apiVersion: apps/v1
-kind: StatefulSet
-metadata:
-  name: eureka-cluster
-  namespace: {{NAMESPACE}}
-spec:
-  serviceName: "eureka"
-  replicas: 3
-  selector:
-    matchLabels:
-      app: eureka-cluster
-  template:
-    metadata:
-      labels:
-        app: eureka-cluster
-    spec:
-      containers:
-        - name: eureka
-          image: {{IMAGE_URL}}
-...
-```
-
-维护新组件的ingress:
-
-```bash
-$ kubectl -n dev edit configmap devops-config
-...
-  INGRESS_EUREKA: eureka.luffy.com
-...
-```
-
-部署k8s集群时，将eureka的集群地址通过参数的形式传递到pod内部，因此本地开发时，直接按照单点模式进行：
-
-```yaml
-server:
-  port: ${EUREKA_PORT:8761}
-eureka:
-  client:
-    service-url:
-      defaultZone: ${EUREKA_SERVER:http://${spring.security.user.name}:${spring.security.user.password}@localhost:8761/eureka/}
-    fetch-registry: true
-    register-with-eureka: true
-  instance:
-    instance-id: ${eureka.instance.hostname}:${server.port}
-    hostname: ${EUREKA_INSTANCE_HOSTNAME:localhost}
-    prefer-ip-address: true
-spring:
-  security:
-    user:
-      name: ${EUREKA_USER:admin}
-      password: ${EUREKA_PASS:admin}
-  application:
-    name: eureka-cluster
-```
-
-提交项目：
-
-创建develop分支，CICD部署开发环境
-
-
-
 # [服务提供者](http://49.7.203.222:3000/#/spring-cloud/provider)
 
 #### [微服务间调用](http://49.7.203.222:3000/#/spring-cloud/provider?id=微服务间调用)
@@ -2875,7 +2178,7 @@ spring:
 
 前面已经将用户服务注册到了eureka注册中心，但是还没有暴漏任何API给服务消费者调用。
 
-新建controller类：
+User-service/src/mian/java/com.luffy.userservice右键新建java class 名称：controller.UserController.java ：
 
 ```java
 package com.luffy.userservice.controller;
@@ -2914,7 +2217,7 @@ public class UserController {
 }
 ```
 
-实体类User.java
+实体类User.java.  com.luffy.userservice右键新建java class 名称 entity.User
 
 ```java
 package com.luffy.userservice.entity;
@@ -2957,9 +2260,9 @@ public class User {
         this.sex = sex;
     }
 }
-application.yml
 ```
 
+`application.yml` 
 增加从环境变量中读取`EUREKA_SERVER`和`EUREKA_INSTANCE_HOSTNAME`配置
 
 ```yaml
@@ -2978,10 +2281,24 @@ spring:
     name: user-service
 ```
 
+验证接口
+
+```bash
+#浏览器访问
+localhost:7000/user
+localhost:7000/user-nums
+localhost:7000/user/1
+```
+
+
+
+
+
 ###### [CICD持续交付服务提供者](http://49.7.203.222:3000/#/spring-cloud/provider?id=cicd持续交付服务提供者)
 
+`manifests/deployment.yaml` 创建目录 manifests/
+
 ```
-deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -3005,11 +2322,11 @@ spec:
             - containerPort: 7000
           resources:
             requests:
-              memory: 400Mi
-              cpu: 50m
+              memory: 256Mi
+              cpu: 100m
             limits:
-              memory: 2Gi
-              cpu: 2000m
+              memory: 512Mi
+              cpu: 500m
           env:
             - name: EUREKA_SERVER
               value: "http://admin:admin@eureka-cluster-0.eureka:8761/eureka/,http://admin:admin@eureka-cluster-1.eureka:8761/eureka/,http://admin:admin@eureka-cluster-2.eureka:8761/eureka/"
@@ -3017,7 +2334,11 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
-service.yaml
+```
+
+`manifests/service.yaml`
+
+```
 apiVersion: v1
 kind: Service
 metadata:
@@ -3034,7 +2355,11 @@ spec:
   type: ClusterIP
 status:
   loadBalancer: {}
-ingress.yaml
+```
+
+`manifests/ingress.yaml`
+
+```
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
@@ -3064,7 +2389,9 @@ data:
   INGRESS_USER_SERVICE: user-service-dev.luffy.com
   NAMESPACE: dev
 ...
-Jenkinsfile
+```
+`Jenkinsfile`
+```
 @Library('luffy-devops') _
 
 pipeline {
@@ -3074,7 +2401,7 @@ pipeline {
         gitLabConnection('gitlab')
     }
     environment {
-        IMAGE_REPO = "172.21.51.143:5000/spring-cloud/user-service"
+        IMAGE_REPO = "10.211.55.27:5000/spring-cloud/user-service"
         IMAGE_CREDENTIAL = "credential-registry"
         DINGTALK_CREDS = credentials('dingTalk')
         PROJECT = "user-service"
@@ -3152,14 +2479,23 @@ pipeline {
         }
     }
 }
-pom.xml
+```
+`pom.xml` 增加内容
+
+```
 <finalName>${project.artifactId}</finalName>
-Dockerfile
+```
+`Dockerfile`
+```
 FROM openjdk:8-jdk-alpine
 COPY target/user-service.jar app.jar
 ENV JAVA_OPTS=""
 CMD [ "sh", "-c", "java $JAVA_OPTS -jar /app.jar" ]
-sonar-project.properties
+```
+
+`sonar-project.properties`
+
+```
 sonar.projectKey=user-service
 sonar.projectName=user-service
 # if you want disabled the DTD verification for a proxy problem for example, true by default
@@ -3170,9 +2506,10 @@ sonar.tests=src/test/java
 sonar.java.binaries=target/classes
 ```
 
-创建user-service项目，提交代码：
+gitlab创建user-service项目，提交代码：
 
 ```bash
+cd user-service 
 git init
 git remote add origin http://gitlab.luffy.com/luffy-spring-cloud/user-service.git
 git add .
@@ -3184,9 +2521,26 @@ git checkout -b develop
 git push -u origin develop
 ```
 
-创建Jenkins任务，测试自动部署
+创建Jenkins任务名称user-service;复制eureka；
 
-访问`http://user-service-dev.luffy.com/` 验证
+更换git仓库地址http://gitlab.luffy.com/luffy-spring-cloud/user-service.git，
+
+测试自动部署
+
+
+
+```bash
+# 服务资源不够用，调整一下
+[root@k8s-master ~]# kubectl -n dev scale sts eureka-cluster --replicas=1
+
+
+kubectl -n dev scale deployment user-service --replicas=2
+# 浏览器查看http://eureka.luffy.com/
+
+vi /etc/hosts
+10.211.55.25 user-service-dev.luffy.com
+访问http://user-service-dev.luffy.com/user/1  验证
+```
 
 
 
@@ -3200,6 +2554,14 @@ git push -u origin develop
 
 ###### [创建bill-service项目](http://49.7.203.222:3000/#/spring-cloud/consumer?id=创建bill-service项目)
 
+> Group: com.luffy
+>
+> Artifact:  bill-service
+>
+> Type: Maven project
+>
+> Java version: 8 
+
 新的模块初始化三部曲：
 
 - pom.xml
@@ -3209,7 +2571,9 @@ git push -u origin develop
 `pom.xml` 添加如下内容:
 
 ```xml
-        <dependency>
+        <version>2.3.6.RELEASE</version> <!--修改版本-->
+....
+				<dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
@@ -3279,7 +2643,11 @@ git push -u origin develop
     </build>
 
 </project>
-BillServiceApplication
+```
+
+`BillServiceApplication`
+
+```
 package com.luffy.billservice;
 
 import org.springframework.boot.SpringApplication;
@@ -3313,7 +2681,7 @@ spring:
     name: bill-service
 ```
 
-BillController
+BillController   //src/main/java/com.luffy.billservice 右键新建java class: controller.BillController
 
 ```java
 package com.luffy.billservice.controller;
@@ -3380,7 +2748,7 @@ public class BillController {
 }
 ```
 
-访问测试
+访问测试 http://localhost:7001/bill/user/
 
 **总体来说，就是通过为加入`@LoadBalanced`注解的`RestTemplate`添加一个请求拦截器，在请求前通过拦截器获取真正的请求地址，最后进行服务调用。**
 
@@ -3437,9 +2805,19 @@ public class BillController {
 
 ###### [Ribbon 负载均衡](http://49.7.203.222:3000/#/spring-cloud/consumer?id=ribbon-负载均衡)
 
-再启动一个user-service-instance2，复制user-service项目
+再启动一个user-service-2，复制user-service项目
 
-修改user-service-instance2的application.yml的server.port
+修改user-service-2的pom.xml 用记事本打开修改 在用idea打开
+
+```xml
+    <artifactId>user-service-2</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>user-service-2</name>
+```
+
+
+
+修改user-service-2的application.yml的server.port
 
 ```yaml
 server:
@@ -3457,7 +2835,7 @@ spring:
     name: user-service
 ```
 
-修改user-service-instance2的UserController.java，为了可以区分是哪个服务提供者的实例提供的服务
+修改user-service-2的UserController.java，为了可以区分是哪个服务提供者的实例提供的服务
 
 ```java
 package com.luffy.userservice.controller;
@@ -3496,7 +2874,20 @@ public class UserController {
 }
 ```
 
-访问bill-service，查看调用结果（默认是轮询策略）
+启动user-service-2服务
+
+http://localhost:8761/。查看服务注册成功
+
+访问http://localhost:7001/bill/user/ ，查看调用结果（默认是轮询策略）
+
+```bash
+C:\Users\kanghua>curl http://localhost:7001/bill/user/
+this is user-service-instance2
+C:\Users\kanghua>curl http://localhost:7001/bill/user/
+this is user-service
+```
+
+
 
 `Spring Cloud Ribbon`是一个基于Http和TCP的客户端负载均衡工具，它是基于`Netflix Ribbon`实现的。与`Eureka`配合使用时，`Ribbon`可自动从`Eureka Server (注册中心)`获取服务提供者地址列表，并基于`负载均衡`算法，通过在客户端中配置`ribbonServerList`来设置服务端列表去轮询访问以达到均衡负载的作用。
 
@@ -3578,7 +2969,7 @@ public class TicketApplication {
 }
 ```
 
-修改配置文件：
+修改配置文件： 修改bill-service 项目里的配置文件 application.yaml
 
 ```yaml
 server:
@@ -3595,10 +2986,23 @@ eureka:
   instance:
     prefer-ip-address: true
     instance-id: ${spring.cloud.client.ip-address}:${server.port}
-user-service:
+user-service:  #追加这部分就可以
   ribbon:
     NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
 ```
+
+再次验证：RandomRule 策略
+
+```bash
+C:\Users\kanghua>curl http://localhost:7001/bill/user/
+this is user-service-instance2
+C:\Users\kanghua>curl http://localhost:7001/bill/user/
+this is user-service
+C:\Users\kanghua>curl http://localhost:7001/bill/user/
+this is user-service
+```
+
+
 
 ###### [声明式服务Feign](http://49.7.203.222:3000/#/spring-cloud/consumer?id=声明式服务feign)
 
@@ -3610,16 +3014,17 @@ user-service:
 
 https://github.com/OpenFeign/feign
 
-对bill-service项目添加openfeign的依赖引入：
+对bill-service项目添加openfeign的依赖引入：pom.xml
 
 ```xml
+    <dependencies> <!--定位-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 ```
 
-启动类中引入Feign注解：
+启动类中引入Feign注解： BillServiceApplication.java
 
 ```java
 package com.luffy.billservice;
@@ -3641,7 +3046,7 @@ public class BillServiceApplication {
 }
 ```
 
-建立interface
+建立interface  main/java/com.luffy.billservice右键新建java class 名称：interfaces.UserServiceCli 
 
 ```java
 package com.luffy.billservice.interfaces;
@@ -3662,7 +3067,7 @@ public interface UserServiceCli {
 }
 ```
 
-拷贝User类到当前项目：
+拷贝User类到当前项目： main/java/com.luffy.billservice右键新建java class 名称：entity.User 
 
 ```java
 package com.luffy.billservice.entity;
@@ -3739,6 +3144,24 @@ public class BillController {
 }
 ```
 
+
+
+```bash
+# 访问测试 一样
+C:\Users\kanghua>curl http://localhost:7001/bill/user/
+this is user-service-instance2
+C:\Users\kanghua>curl http://localhost:7001/bill/user/
+this is user-service-instance2
+C:\Users\kanghua>curl http://localhost:7001/bill/user/
+this is user-service-instance2
+C:\Users\kanghua>curl http://localhost:7001/bill/user/
+this is user-service
+```
+
+
+
+
+
 ###### [CICD持续交付服务消费者](http://49.7.203.222:3000/#/spring-cloud/consumer?id=cicd持续交付服务消费者)
 
 拷贝user-service的交付文件，替换如下：
@@ -3794,7 +3217,7 @@ pom.xml
         </dependency>
 ```
 
-application.xml
+application.yml
 
 ```xml
 feign:
@@ -3824,7 +3247,10 @@ public class BillServiceApplication {
     }
 
 }
-UserServiceCli.java
+```
+
+UserServiceCli.java.修改
+```java
 package com.luffy.bill.interfaces;
 
 import com.luffy.bill.entity.User;
@@ -3841,7 +3267,10 @@ public interface UserServiceCli {
     @GetMapping("/user/{id}")
     public User getUserInfo(@PathVariable("id") int id);
 }
-UserServiceFallbackImpl.java
+```
+
+UserServiceFallbackImpl.java   interfaces/UserServiceFallbackImpl.java
+```java
 package com.luffy.billservice.interfaces;
 
 import com.luffy.billservice.entity.User;
@@ -3865,13 +3294,15 @@ public class UserServiceFallbackImpl implements UserServiceCli{
 }
 ```
 
+重启bill-service 服务
+
 停止user-service测试熔断及fallback。
 
 当注册中心后面维护的服务实例出现故障后，注册中心会存在时间差来感知到服务故障，这个时间差主要通过如下方面来调节：
 
 - eureka server检测实例是否过期的周期时间
 
-  - eureka server端
+  - eureka server端。application.yaml
 
     ```yaml
     server:
@@ -3973,11 +3404,36 @@ spring:
     name: user-service
 ```
 
+
+
+```
+C:\Windows\system32>curl http://localhost:7001/bill/user/
+this is user-service
+C:\Windows\system32>curl http://localhost:7001/bill/user/
+this is user-service
+C:\Windows\system32>curl http://localhost:7001/bill/user/
+this is user-service-instance2
+C:\Windows\system32>curl http://localhost:7001/bill/user/
+this is user-service
+C:\Windows\system32>curl http://localhost:7001/bill/user/
+fallback user service  #停掉user-service2服务后
+C:\Windows\system32>curl http://localhost:7001/bill/user/
+this is user-service
+C:\Windows\system32>curl http://localhost:7001/bill/user/
+fallback user service
+C:\Windows\system32>curl http://localhost:7001/bill/user/
+this is user-service  #通过http://localhost:8761/ 查看已经剔除了user-service2的7002端口的服务
+C:\Windows\system32>curl http://localhost:7001/bill/user/
+this is user-service
+```
+
+
+
 ###### [Hystrix Dashboard](http://49.7.203.222:3000/#/spring-cloud/hystrix?id=hystrix-dashboard)
 
 前面一章，我们讲解了如何整合`Hystrix`。而在实际情况下，使用了`Hystrix`的同时,还会对其进行实时的数据监控，反馈各类指标数据。今天我们就将讲解下`Hystrix Dashboard`和`Turbine`.其中`Hystrix Dashboard`是一款针对`Hystrix`进行实时监控的工具，通过`Hystrix Dashboard`我们可以在直观地看到各`Hystrix Command`的**请求响应时间**, **请求成功率**等数据,监控单个实例内的指标情况。后者`Turbine`，能够将多个实例指标数据进行聚合的工具。
 
-在eureka注册中心处访问`bill-service`的服务`actuator`地址: `http://192.168.136.1:7001/actuator/info`
+在eureka注册中心处访问`bill-service`的服务`actuator`地址: `http://localhost:7001/actuator/info`
 
 若访问不了,需要添加如下内容:
 
@@ -3990,7 +3446,7 @@ spring:
           </dependency>
   ```
 
-- 修改application.yml配置:
+- 修改application.yml配置: 增加
 
   ```yaml
   management:
@@ -4000,9 +3456,22 @@ spring:
           include: "*"
   ```
 
-访问`http://localhost:9000/actuator/hystrix.stream` 即可访问到断路器的执行状态，但是显示不太友好，因此需要dashboard。
+访问http://localhost:7001/actuator/hystrix.stream 即可访问到断路器的执行状态，但是显示不太友好，因此需要dashboard。
+
+访问 http://localhost:7001/actuator   查看很多监测链接
+
+http://localhost:7001/actuator/hystrix.stream 填入到后面的hystrix-dashboard 的监测地址
 
 新建项目，hystrix-dashboard
+
+```bash
+Group: com.luffy
+Artifact: hystrix-dashboard
+type : maven project
+java version 8 
+```
+
+
 
 > `Hystrix-dashboard(仪表盘)`是一款针对Hystrix进行实时监控的工具，通过`Hystrix Dashboard`我们可以在直观地看到各`Hystrix Command`的请求响应时间, 请求成功率等数据。
 
@@ -4106,6 +3575,12 @@ hystrix:
 
 访问`localhost:9696/hystrix`
 
+输入监测地址 ： http://localhost:7001/actuator/hystrix.stream
+
+Title: bill-service 
+
+再浏览器不停访问http://localhost:7001/bill/user/。查看监测图
+
 - 实心圆：它有颜色和大小之分，分别代表实例的监控程度和流量大小。如上图所示，它的健康度从绿色、黄色、橙色、红色递减。通过该实心圆的展示，我们就可以在大量的实例中快速的发现故障实例和高压力实例。
 
 - 曲线：用来记录 2 分钟内流量的相对变化，我们可以通过它来观察到流量的上升和下降趋势。
@@ -4141,6 +3616,14 @@ hystrix:
 ###### [Zuul实践](http://49.7.203.222:3000/#/spring-cloud/gateway?id=zuul实践)
 
 新建模块，gateway-zuul,(spring cloud)
+
+> Group：com.luffy
+>
+> Artifact: gateway-zuul
+>
+> Type: Maven Project
+>
+> Java version : 8
 
 pom.xml中需要引入zuul和eureka服务发现的依赖
 
@@ -4271,11 +3754,20 @@ http://localhost:10000/bill-service/bill/user/1
 
 http://localhost:10000/user-service/user
 
+```bash
+C:\Windows\system32>curl http://localhost:10000/bill-service/bill/user/1
+{"id":1,"name":"zhangsan","age":20,"sex":"male"}
+C:\Windows\system32>curl http://localhost:10000/user-service/user
+this is user-service
+```
+
+
+
 filter 过滤器
 
 **BILL-SERVICE** =》 [bill-service:7001](http://192.168.136.1:7001/actuator/info)
 
-通过如下方式，配置短路径：
+通过如下方式，配置短路径： //追加 application.yaml
 
 ```yaml
 zuul:
@@ -4284,22 +3776,32 @@ zuul:
     bill-service:
       path: /bill/**
       service-id: bill-service
+```
+
+```
 http://localhost:10000/users/user/1
                                                  --->  http://localhost:7000/user/1
 http://localhost:10000/user-service/user/1
 
 
 
-http://localhost:10000/bill/service/user/2 
-                                                 --->http://localhost:7001/service/user/2
-http://localhost:10000/bill-service/service/user/2
+http://localhost:10000/bill/bill/user/2 
+                                                 --->http://localhost:7001/bill/user/2
+http://localhost:10000/bill-service/bill/user/2
 ```
 
 zuul如何指定对外暴漏api的path，如：
 
 所有的api都是这样：`http://zuul-host:zuul-port/apis/`，可以添加`zuul.prefix：/apis`
 
-配置一下配置文件
+```bash
+//追加 application.yaml //访问地址追加前缀
+zuul.prefix：/apis
+```
+
+
+
+配置一下配置文件 //追加 application.yaml
 
 ```yaml
 management:
@@ -4347,6 +3849,7 @@ Spring Cloud Sleuth 为服务之间调用提供链路追踪。通过 Sleuth 可�
 ###### [启动zipkin](http://49.7.203.222:3000/#/spring-cloud/zipkin?id=启动zipkin)
 
 ```yaml
+cat > zipkin.yaml <<EOF
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -4370,11 +3873,11 @@ spec:
             - containerPort: 9411
           resources:
             requests:
-              memory: 400Mi
-              cpu: 50m
+              memory: 256Mi
+              cpu: 100m
             limits:
-              memory: 2Gi
-              cpu: 2000m
+              memory: 512Mi
+              cpu: 1000m
 ---
 apiVersion: v1
 kind: Service
@@ -4410,7 +3913,10 @@ spec:
             name: zipkin
             port:
               number: 9411
+EOF
 ```
+
+开发机器上配置一下 hosts 
 
 ###### [实践](http://49.7.203.222:3000/#/spring-cloud/zipkin?id=实践)
 
@@ -4451,8 +3957,17 @@ logging:
 
 新建项目，`springboot-admin`
 
-```
+> Group: com.luffy
+>
+> Artifact:  springboot-admin
+>
+> Type: Maven project
+>
+> Java version: 8 
+
+
 pom.xml
+```xml
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -4513,7 +4028,7 @@ pom.xml
 </project>
 ```
 
-配置文件
+配置文件 application.yaml
 
 ```yaml
 server:
@@ -4537,7 +4052,7 @@ eureka:
     lease-expiration-duration-in-seconds: 2
 ```
 
-启动类
+启动类. SpringbootAdminApplication.java
 
 ```java
 package com.luffy.springbootadmin;
@@ -4559,7 +4074,7 @@ public class SpringbootAdminApplication {
 }
 ```
 
-客户端，所有注册到eureka的服务，添加依赖即可
+客户端，所有注册到eureka的服务，添加依赖即可. 比如：user-service服务
 
 ```xml
         <dependency>
